add sticky head in table

--- a/index.html
+++ b/index.html
@@ -257,33 +257,15 @@
 							<tbody>
 								<tr>
 									<td>1</td>
-									<td>
-											<div class="table__text"><a href="javascript:void(0)" class="table__link">Кировская область</a></div>
-									</td>
-									<td>
-											<a href="javascript:void(0)" class="table__link">Много разного текста Много разного текста</a>
-									</td>
-									<td>
-											Много разного текста Много разного текста
-									</td>
-									<td>
-											Много разного текста Много разного текста
-									</td>
-									<td>
-											Много разного текста Много разного текста
-									</td>
-									<td>
-											Много разного текста Много разного текста
-									</td>
-									<td>
-											Много разного текста Много разного текста
-									</td>
-									<td>
-											Много разного текста Много разного текста
-									</td>
-									<td>
-											Много разного текста Много разного текста
-									</td>
+									<td><div class="table__text"><a href="javascript:void(0)" class="table__link">Кировская область</a></div></td>
+									<td><a href="javascript:void(0)" class="table__link">Много разного текста Много разного текста</a></td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
 									<td>
 											<ul class="table__controls">
 												<li>
@@ -300,30 +282,14 @@
 									<td>
 											<div class="table__text"><a href="javascript:void(0)" class="table__link">Московская</a> </div>
 									</td>
-									<td>
-											<div class="table__text">область</div>
-									</td>
-									<td>
-											<div class="table__text">область</div>
-									</td>
-									<td>
-											<div class="table__text">область</div>
-									</td>
-									<td>
-											<div class="table__text">область</div>
-									</td>
-									<td>
-											<div class="table__text">область</div>
-									</td>
-									<td>
-											<div class="table__text">область</div>
-									</td>
-									<td>
-											<div class="table__text">область</div>
-									</td>
-									<td>
-											<div class="table__text">область</div>
-									</td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
 									<td>
 											<ul class="table__controls">
 												<li>
@@ -337,26 +303,118 @@
 								</tr>
 								<tr>
 									<td>3</td>
+									<td><div class="table__text">Краснодарский край Краснодарский край Краснодарский край</div></td>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td>Длинный_текст_в_одну_строку_например_ссылка</td>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td></td>
 									<td>
-											<div class="table__text">Краснодарский край Краснодарский край Краснодарский край</div>
+											<ul class="table__controls table__controls--icons">
+												<li>
+													<a href="javascript:void(0)" class="table__link">
+														<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+															<circle cx="12" cy="12" r="12" fill="#00AAD2" />
+															<path d="M15.8892 6.48958L18.0105 8.6109L9.16482 17.4566L7.6086 17.3593C7.35702 17.3436 7.15648 17.143 7.14076 16.8915L7.0435 15.3352L15.8892 6.48958Z"
+															stroke="white" />
+															<path d="M13.7678 8.6109L15.8891 10.7322" stroke="white" />
+														</svg>
+													</a>
+												</li>
+												<li>
+													<a href="javascript:void(0)" class="table__link">
+														<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+															<circle cx="12" cy="12" r="12" fill="#E63312" />
+															<path d="M7 7.5L8.5 17.5H15.5L17 7.5" stroke="white" />
+															<path d="M6 7.5H18" stroke="white" />
+															<rect x="9.5" y="5.5" width="5" height="2" stroke="white" />
+														</svg>
+													</a>
+												</li>
+											</ul>
 									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<div class="table__wrap-fixed">
+						<table class="table">
+							<thead>
+								<tr>
+									<th>id</th>
+									<th>Название</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Кнопки</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<th>1</th>
+									<td><div class="table__text"><a href="javascript:void(0)" class="table__link">Кировская область</a></div></td>
+									<td><a href="javascript:void(0)" class="table__link">Много разного текста Много разного текста</a></td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
+									<td>Много разного текста Много разного текста</td>
 									<td>
+											<ul class="table__controls">
+												<li>
+													<a href="javascript:void(0)" class="table__link">Изменить</a>
+												</li>
+												<li>
+													<a href="javascript:void(0)" class="table__link">Удалить</a>
+												</li>
+											</ul>
 									</td>
+								</tr>
+								<tr>
+									<th>2</th>
 									<td>
+											<div class="table__text"><a href="javascript:void(0)" class="table__link">Московская</a> </div>
 									</td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
+									<td><div class="table__text">область</div></td>
 									<td>
+											<ul class="table__controls">
+												<li>
+													<a href="javascript:void(0)" class="table__link">Изменить</a>
+												</li>
+												<li>
+													<a href="javascript:void(0)" class="table__link">Удалить</a>
+												</li>
+											</ul>
 									</td>
-									<td>
-											Длинный_текст_в_одну_строку_например_ссылка
-									</td>
-									<td>
-									</td>
-									<td>
-									</td>
-									<td>
-									</td>
-									<td>
-									</td>
+								</tr>
+								<tr>
+									<th>3</th>
+									<td><div class="table__text">Краснодарский край Краснодарский край Краснодарский край</div></td>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td>Длинный_текст_в_одну_строку_например_ссылка</td>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td></td>
 									<td>
 											<ul class="table__controls table__controls--icons">
 												<li>
@@ -410,9 +468,7 @@
 								</tr>
 								<tr>
 									<td>1</td>
-									<td>
-										<div class="table__text">Кировская область</div>
-									</td>
+									<td><div class="table__text">Кировская область</div></td>
 									<td>
 											<ul class="table__controls table__controls--icons">
 												<li>
@@ -440,9 +496,7 @@
 								</tr>
 								<tr>
 									<td>2</td>
-									<td>
-											<div class="table__text">Московская </div>
-									</td>
+									<td><div class="table__text">Московская </div></td>
 									<td>
 											<ul class="table__controls table__controls--icons">
 												<li>
@@ -470,9 +524,7 @@
 								</tr>
 								<tr>
 									<td>3</td>
-									<td>
-											<div class="table__text">Краснодарский край Краснодарский край Краснодарский край</div>
-									</td>
+									<td><div class="table__text">Краснодарский край Краснодарский край Краснодарский край</div></td>
 									<td>
 											<ul class="table__controls table__controls--icons">
 												<li>
