sticky header in third table

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 							</tbody>
 						</table>
 					</div>
-					<div class="table__wrap">
+					<div class="table__wrap-sticky-header">
 						<table class="table">
 							<thead>
 								<tr>
