add order to setting db table

--- a/settings.html
+++ b/settings.html
@@ -339,6 +339,7 @@
 									<th>name</th>
 									<th>type</th>
 									<th>value</th>
+									<th>order</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -355,6 +356,7 @@
 											{'key':'url', 'placeholder':'URL сайта', 'label':'URL сайта'}
 										]
 									</td>
+									<td>100</td>
 								</tr>
 								<tr>
 									<td>hpromise</td>
@@ -366,6 +368,7 @@
 											{'key':'asp', 'placeholder':'H-Promise Авто с пробегом', 'label':'H-Promise Авто с пробегом'}
 										]
 									</td>
+									<td>200</td>
 								</tr>
 								<tr>
 									<td>someH2</td>
@@ -375,6 +378,7 @@
 											{'key':'text', 'value':'Если надо показать заголовок'}
 										]
 									</td>
+									<td>300</td>
 								</tr>
 								<tr>
 									<td>someText</td>
@@ -384,6 +388,7 @@
 											{'key':'text', 'value':'Как-то он правда стремно смотрится. Надо поправить стили.'}
 										]
 									</td>
+									<td>400</td>
 								</tr>
 								<tr>
 									<td>header</td>
@@ -410,6 +415,7 @@
 											},
 										]
 									</td>
+									<td>500</td>
 								</tr>
 								<tr>
 									<td>service_menu</td>
@@ -427,6 +433,7 @@
 											}
 										]
 									</td>
+									<td>600</td>
 								</tr>
 								<tr>
 									<td>search</td>
@@ -444,6 +451,7 @@
 											}
 										]
 									</td>
+									<td>700</td>
 								</tr>
 							</tbody>
 						</table>
