fix table type settings page

--- a/settings.html
+++ b/settings.html
@@ -332,7 +332,7 @@
 					<div class="content__line table__flex table__flex--caption">
 						<h2 class="h2">БД будет выглядеть вот так</h2>
 					</div>
-					<div class="table__wrap-sticky-header">
+					<div class="table__wrap">
 						<table class="table">
 							<thead>
 								<tr>
